# burn-recsys

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Secrets.toml  Shuttle.toml  pyproject.toml
.github/workflows/: ci.yml
checkpoints/: config.toml
config/: default.toml  evaluate.toml  model_info.toml  train_movielens.toml  train_myket.toml  validate_data.toml
docs/: architecture.md  getting-started.md  overview.md  rust-ml-intern-guide.md  why-rust.md
examples/: evaluate.rs  model_info.rs  movielens_ncf.rs  myket_ncf.rs  validate_data.rs
scripts/: download_movielens.py  download_myket.py  validate_data.rs
src/: lib.rs  server.rs  telemetry.rs
src/data/: dataset.rs  mod.rs  polars_loader.rs  sampler.rs
src/metrics/: eval.rs  hit_rate.rs  mod.rs  ndcg.rs
src/middleware/: layer.rs
src/models/: deepfm.rs  gmf.rs  mod.rs  ncf.rs
src/server/: handlers.rs  mod.rs  model.rs  retrieval.rs  router.rs  state.rs
src/trainer/: config.rs  mod.rs  train.rs
tests/: integration.rs  server.rs
