[package]
name = "burn-recsys"
version = "0.3.0"
edition = "2021"
description = "Production-grade recommendation system: DeepFM + NeuMF with Burn, Polars, Axum, OpenTelemetry"
license = "MIT"
repository = "https://github.com/wedjaw/burn-recsys"

[lib]
name = "burn_recsys"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[example]]
name = "myket_ncf"
path = "examples/myket_ncf.rs"

[[example]]
name = "movielens_ncf"
path = "examples/movielens_ncf.rs"

[[example]]
name = "validate_data"
path = "examples/validate_data.rs"

[[example]]
name = "model_info"
path = "examples/model_info.rs"

[[example]]
name = "evaluate"
path = "examples/evaluate.rs"

[dependencies]
# Deep learning
burn           = { version = "0.17", features = ["ndarray", "autodiff"] }
burn-ndarray   = "0.17"

# Data pipeline
polars         = { version = "0.46", features = ["csv", "lazy", "strings"] }
csv            = "1"

# Docs
utoipa         = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Embedding
instant-distance = "0.6"
bincode = "1.3"

# Serving
axum           = "0.7"
tokio          = { version = "1", features = ["full"] }
tower          = "0.4"
tower-http     = { version = "0.5", features = ["trace"] }

# Serialization
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Observability
tracing               = "0.1"
tracing-subscriber    = { version = "0.3", features = ["env-filter", "fmt", "json"] }
opentelemetry         = { version = "0.22", features = ["metrics"] }
opentelemetry_sdk     = { version = "0.22", features = ["rt-tokio", "metrics"] }
opentelemetry-stdout  = { version = "0.3", features = ["metrics"] }
tracing-opentelemetry = "0.23"

# Configuration
config   = { version = "0.14", features = ["toml"] }

# CLI
clap     = { version = "4", features = ["derive"] }

# Config serialization
toml     = "0.8"

# Utilities
rand     = { version = "0.8", features = ["small_rng"] }
anyhow   = "1"
log      = "0.4"
env_logger = "0.11"

[dev-dependencies]
burn = { version = "0.17", features = ["ndarray", "autodiff"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
portpicker = "0.1.1"
once_cell = "1.19"

[features]
default = []
cuda = ["burn/tch"]

[profile.release]
opt-level = 3
lto = true
